--- a/packages/app/src/util/styles/utils.module.css
+++ b/packages/app/src/util/styles/utils.module.css
@@ -38,3 +38,7 @@
 .positionRelative {
   position: relative !important;
 }
+
+.mlAuto {
+  margin-left: auto;
+}
